[package]
name = "JSON_viewer"
version = "0.1.0"
edition = "2021"

[dependencies]
eframe = { version = "0.23", features = ["glow"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rfd = "0.11"
indexmap = { version = "1.9", features = ["serde"] }
winapi = { version = "0.3", features = ["winuser", "windef"] }
